--- a/k8s/kind/multi-node.yml
+++ b/k8s/kind/multi-node.yml
@@ -3,6 +3,6 @@ kind: Cluster
 name: kind-multi
 nodes:
   - role: control-plane
-  - role: control-plane
+  - role: worker
   - role: worker
   - role: worker
