--- a/k8s/helm/helm-dev-basics/helmbasics/templates/deployment.yaml
+++ b/k8s/helm/helm-dev-basics/helmbasics/templates/deployment.yaml
@@ -1,27 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-{{ .Chart.Name }}
+  name: {{ .Release.Name }}-{{ .Chart.Name }}-deployment
   labels:
-    app: nginx
-  annotations:
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    # Quote Function
-    app.kubernetes.io/managed-by: {{ quote .Release.Service }}        
-    # Pipeline
-    app.kubernetes.io/managed-by: {{ .Release.Service | quote | upper | lower }}        
-    # ***default Function ****
-    app.kubernetes.io/name: {{ default "MYRELEASE101" .Values.releaseName | lower }}
-    # Controlling Leading and Trailing White spaces 
-    leading-whitespace: "   {{- .Chart.Name }}    helm-dev"
-    trailing-whitespace: "   {{ .Chart.Name -}}    helm-dev"
-    leadtrail-whitespace: "   {{- .Chart.Name -}}    helm-dev"   
-    # indent function
-    indenttest: "  {{- .Chart.Name | indent 4 -}}  "  
-    # nindent function
-    nindenttest: "  {{- .Chart.Name | nindent 4 -}}  "        
+# {{- template "helmbasics.labels" .}}   
+  {{- include "helmbasics.labels" . | upper }}
 spec:
-  replicas: {{ default 2 .Values.replicaCount }}
+  replicas: 2
   selector:
     matchLabels:
       app: nginx
@@ -35,5 +20,3 @@ spec:
         image: ghcr.io/stacksimplify/kubenginx:4.0.0
         ports:
         - containerPort: 80
-        resources:
-{{- toYaml .Values.resources | nindent 10 }}
